Bug 402722 - Strange multiple duplication of labels on interfaces in component diagram after saving
Summary: Strange multiple duplication of labels on interfaces in component diagram aft...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.26.2 (KDE Applications 18.08.2)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-31 07:37 UTC by sggdev.im
Modified: 2019-01-10 22:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.27.1 (KDE Applications 18.12.1)
Sentry Crash Report:


Attachments
Broken component diagram ('package diagramm') (561.20 KB, application/xml)
2018-12-31 07:37 UTC, sggdev.im
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sggdev.im 2018-12-31 07:37:06 UTC
Created attachment 117197 [details]
Broken component diagram ('package diagramm')

After editing the component diagram and saving it, re-opening the diagram leads to duplication of labels on the interfaces. New markers appear in the lower right corner of the diagram tightly to each other. An attempt to delete a single label leads to the removal of all its duplicates. After removing exactly duplicates, they reappear after saving and opening the diagram.


STEPS TO REPRODUCE
1. Create component diagram
2. Create a lot of components and interfaces
3. Connect components and interfaces by associations
4. Delete, edit interfaces
5. Save diagram
6. Close umbrello
7. Open umbrello, open diagram

OBSERVED RESULT
Duplication of labels on the interfaces. New dublicated labels appear in the lower right corner of the diagram tightly to each other.

EXPECTED RESULT
The number and position of labels on the interfaces must correspond to their number and position before saving.

SOFTWARE/OS VERSIONS
Windows: 64bit, Windows 7, umbrello 2.62.2

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2019-01-08 23:52:45 UTC
This issue can also be reproduced by adding one component and one interface with a connection between them.
Comment 2 Ralf Habacker 2019-01-09 00:00:10 UTC
(In reply to Ralf Habacker from comment #1)
> This issue can also be reproduced by adding one component and one interface
> with a connection between them.
It is enough to only add one interface to have this issue.

The saved file contains two <floatingtext> tags with the same content, which let me think that this issue happens on saving the file.
Comment 3 Ralf Habacker 2019-01-09 10:02:02 UTC
Git commit 3cc83a5f971b93c1e850eaa3a8d19765d6a17ecd by Ralf Habacker.
Committed on 09/01/2019 at 10:01.
Pushed by habacker into branch 'Applications/18.12'.

Fix 'Strange multiple duplication of labels on interfaces in component diagram after saving'

Exclude text widgets from saving into a file below <widgets> tag if they
have a QGraphicsItem parent. They are already saved by their parents.

FIXED-IN:2.27.1

M  +3    -0    umbrello/umlscene.cpp

https://commits.kde.org/umbrello/3cc83a5f971b93c1e850eaa3a8d19765d6a17ecd
Comment 4 Ralf Habacker 2019-01-09 10:03:10 UTC
Git commit d1cf9e5e7e088d49eb34b6b16dd57b0c74b39cef by Ralf Habacker.
Committed on 09/01/2019 at 10:02.
Pushed by habacker into branch '4.8'.

Fix 'Strange multiple duplication of labels on interfaces in component diagram after saving'

Exclude text widgets from saving into a file below <widgets> tag if they
have a QGraphicsItem parent. They are already saved by their parents.

FIXED-IN:2.27.1

M  +3    -0    umbrello/umlscene.cpp

https://commits.kde.org/umbrello/d1cf9e5e7e088d49eb34b6b16dd57b0c74b39cef