Fix 'Strange multiple duplication of labels on interfaces in component diagram after saving'

Exclude text widgets from saving into a file below <widgets> tag if they
have a QGraphicsItem parent. They are already saved by their parents.

FIXED-IN:2.27.1
BUG:402722